opam-version: "2.0"
maintainer: "Christophe Troestler <Christophe.Troestler@umons.ac.be>"
authors: [ "Richard Jones"
           "Christophe Troestler" ]
tags: ["csv" "database" "science"]
license: "LGPL-2.1 with OCaml linking exception"
homepage: "https://github.com/Chris00/ocaml-csv"
dev-repo: "git+https://github.com/Chris00/ocaml-csv.git"
bug-reports: "https://github.com/Chris00/ocaml-csv/issues"
doc: "https://Chris00.github.io/ocaml-csv/doc"
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
depends: [
  "ocaml" {>= "4.03.0"}
  "dune" {build}
  "base-bytes"
  "base-unix"
  "csv" {= version}
  "uutf"
]
synopsis: "Command line tool for handling CSV files"
description: """
This is a handy command line tool for handling CSV files from shell
scripts based on the library `csv`."""
