(executables
 (names     test test_header test_write test_fix test_bom)
 (modules   test test_header test_write test_fix test_bom)
 (libraries csv))

(alias
 (name    runtest)
 (package csv)
 (deps    (:p test.exe) (glob_files *.csv))
 (action  (run %{p})))

(alias
 (name    runtest)
 (package csv)
 (deps    (:p test_header.exe) (glob_files *.csv))
 (action  (run %{p})))

(alias
 (name    runtest)
 (package csv)
 (deps    (:p test_write.exe) (glob_files *.csv))
 (action  (run %{p})))

(alias
 (name    runtest)
 (package csv)
 (deps    (:p test_fix.exe) (glob_files *.csv))
 (action  (run %{p})))

(alias
 (name    runtest)
 (package csv)
 (deps    (:p test_bom.exe) (glob_files *.csv))
 (action  (run %{p})))

(executables
 (names     test_lwt)
 (modules   test_lwt)
 (libraries csv_lwt lwt.unix))

(alias
 (name    runtest)
 (package csv-lwt)
 (deps    (:p test_lwt.exe) (glob_files *.csv))
 (action  (run %{p})))

(executables
 (names     test_eio)
 (modules   test_eio)
 (libraries csv_eio eio_main))

(alias
 (name    runtest)
 (package csv-eio)
 (deps    (:p test_eio.exe) (glob_files *.csv))
 (action  (run %{p})))


(rule
 (targets test.ml test_lwt.ml test_eio.ml)
 (deps   test.pp.ml ../config/pp.exe)
 (action (chdir %{project_root} (run config/pp.exe))))
